﻿This file includes only a short list of the changes between Media Player Classic - BE's versions.

1.5.4 (beta)
=============================

Updated libraries:
	dav1d git-0.5.0-2-g62fcd0c;
	ffmpeg git-n4.3-dev-1171-g37d8ae9da8;
	Little-CMS git-lcms2.9-41-ge3beb54;
	libflac git-1.3.3-19-g6d0e222a;
	MediaInfo git-v19.09-2-gb4540232;
	openjpeg git-v2.3.1-2-gd0dd894a;
	rapidjson git-v1.1.0-508-gd67a69a9;

1.5.3
=============================

ShoutcastSource
Added support for metadata written in json format.

Oggsplitter
Improved chapter support.
Fixed playback of very small files.

Flvsplitter
Added support for Xunlei XV files.

MpegSplitter
Added support for mixed H.264 3D MVC streams.
The initial size of the read data for local files is increased to 60 megabytes if there is a HEVC stream in the PMT.
Added support for MPEG-PS with mu-law streams.
Improved navigation on files with corrupted blocks.

MP4Splitter
Added support for the 'r210' video codec for MOV files.
Added support for trimming the frame (atom 'clap').
Added support for MP4 dash files, with separate segments for each track.
Added support for Avid DNxHR video ('AVdh').
Added color space support (atom 'colr').
Added support for HDR Light Level (atom 'clli').
Added support for HDR metadata (atom 'mdcv').

DVRSplitter
Added full support for DAV (DHAV) files.

MpaDecFilter
Always decode DTS Express streams to PCM.
Improved DTS-HD HRA bitstream compatibility.
Improved TrueHD+Atmos bitstream.
Added MLP bitstream.

Mpeg2DecFilter
Changed the format of the brightness, contrast, hue and saturation.
The filter built into the player is now only connected for DVD-Video. In other cases, for MPEG-1 and MPEG-2 MPCVideoDec will be connected.

MPCVideoDec
Removed option "H264 deblocking disable method".
Added option "Skip B-frames".
Corrected row order when converting RGR to RGB32.
Added support for AVrp codec (Avid 1: 1 10-bit RGB Packer).
Improved support for getting color space from the upstream filter.