@@ -8,9 +8,10 @@ Updated libraries:
 	ffmpeg git-n4.3-dev-1171-g37d8ae9da8;
 	Little-CMS git-lcms2.9-41-ge3beb54;
 	libflac git-1.3.3-19-g6d0e222a;
-	MediaInfo git-v19.09-2-gb4540232;
+	MediaInfo git-v19.09-12-g4c8a5a6e;
 	openjpeg git-v2.3.1-2-gd0dd894a;
 	rapidjson git-v1.1.0-508-gd67a69a9;
+	ZenLib git-v0.4.37-50-gfef7392;
 
 1.5.3
 =============================
